--- a/wxapp/todos/project.config.json
+++ b/wxapp/todos/project.config.json
@@ -4,18 +4,17 @@
 		"ignore": []
 	},
 	"setting": {
-		"urlCheck": false,
+		"urlCheck": true,
 		"es6": true,
 		"postcss": true,
 		"minified": true,
 		"newFeature": true,
-		"autoAudits": false,
-		"checkInvalidKey": true
+		"autoAudits": false
 	},
 	"compileType": "miniprogram",
-	"libVersion": "2.6.5",
-	"appid": "wx6a52e69c8affb82d",
-	"projectname": "wxappLearn",
+	"libVersion": "2.6.6",
+	"appid": "wx05e37fe4b3e41841",
+	"projectname": "todos",
 	"debugOptions": {
 		"hidedInDevtools": []
 	},
@@ -31,24 +30,13 @@
 			"current": -1,
 			"list": []
 		},
-		"plugin": {
-			"current": -1,
-			"list": []
-		},
 		"game": {
 			"currentL": -1,
 			"list": []
 		},
 		"miniprogram": {
-			"current": 0,
-			"list": [
-				{
-					"id": -1,
-					"name": "进来的主页面",
-					"pathName": "pages/main/index",
-					"scene": null
-				}
-			]
+			"current": -1,
+			"list": []
 		}
 	}
 }
