最近的vue和node里面的知识 2019.6.5

--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "babel-plugin-transform-object-rest-spread": "^6.26.0"
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "iview": "^3.4.2",
+    "vue": "^2.6.10"
   }
 }
