--- a/mp-vue/vue-eleme-appB/package.json
+++ b/mp-vue/vue-eleme-appB/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "todomvc",
+  "name": "vue-eleme-app",
   "version": "1.0.0",
   "description": "A Vue.js project",
-  "author": "shunwuyu <shunwu2001@163.com>",
+  "author": "wn <652501825@qq.com>",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
@@ -10,8 +10,10 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.19.0",
+    "better-scroll": "^1.15.2",
     "vue": "^2.5.2",
-    "vuex": "^3.1.1"
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -40,6 +42,8 @@
     "rimraf": "^2.6.0",
     "semver": "^5.3.0",
     "shelljs": "^0.7.6",
+    "stylus": "^0.54.5",
+    "stylus-loader": "^3.0.2",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
     "vue-loader": "^13.3.0",
