call的实现原理，浅拷贝和深拷贝,闭包的定义和作用

--- a/nya/project.config.json
+++ b/nya/project.config.json
@@ -10,7 +10,7 @@
 		"autoAudits": false,
 		"checkInvalidKey": true
 	},
-	"appid": "wx05e37fe4b3e41841",
+	"appid": "wx5899db5e5171ad58",
 	"projectname": "nya",
 	"libVersion": "2.2.5",
 	"simulatorType": "wechat",
